[tool.poetry]
name = "creeper"
version = "0.1.0"
description = ""
authors = ["Neville Yee <neville.yee@rfi.ac.uk>"]
license = "Apache V2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.26.0"
tqdm = "*"
jupyterlab = "*"
matplotlib = "*"
scikit-learn = "*"

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
